--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
+	<link href="src/styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
